--- a/src/app/components/home/home/home.html
+++ b/src/app/components/home/home/home.html
@@ -1,5 +1,6 @@
-<p>home works!</p>
-<app-carousel></app-carousel>
-<app-customer-review> </app-customer-review>
-<app-popular-packages></app-popular-packages>
-<app-newsletter></app-newsletter>
+<main class="main-content">
+  <app-carousel></app-carousel>
+  <app-popular-packages></app-popular-packages>
+  <app-customer-review></app-customer-review>
+  <app-newsletter></app-newsletter>
+</main>
