--- a/src/app/components/contact/contact-form/contact-form.html
+++ b/src/app/components/contact/contact-form/contact-form.html
@@ -1,25 +1,30 @@
-<!-- Left column: Contact form -->
+<!-- Contact form -->
 <div>
   <div class="form-container">
     <h2>Send us a message</h2>
     <p style="color: var(--gray); margin-bottom: 18px">
       Got a quick question or need help planning? Fill the form and we'll respond shortly.
     </p>
-
+    <!-- Name -->
     <form #userForm="ngForm" (ngSubmit)="onSubmit(userForm)">
       <div class="form-row">
         <div class="form-group">
           <label for="cname">Full name *</label>
           <input id="cname" name="cname" type="text" [(ngModel)]="contact.cname" #cname="ngModel"
             placeholder="Your name" required />
+
+        <!-- Validation errors -->
           <div class="error-message" id="err-cname" *ngIf="cname.invalid && cname.touched">
             <small *ngIf="cname.errors?.['required']">First Name is required</small>
           </div>
         </div>
+        <!-- Email -->
         <div class="form-group">
           <label for="cemail">Email *</label>
           <input id="cemail" name="cemail" type="email" [(ngModel)]="contact.cemail" #cemail="ngModel"
             placeholder="you@example.com" required email />
+
+          <!-- Validation errors -->
           <div class="error-message" id="err-cemail" *ngIf="cemail.invalid && cemail.touched">
             <small *ngIf="cemail.errors?.['required']">Email is required</small>
             <small *ngIf="cemail.errors?.['email']">Enter a valid email address</small>
@@ -27,18 +32,20 @@
         </div>
 
       </div>
-
+      <!-- Phone -->
       <div class="form-row">
         <div class="form-group">
           <label for="cphone">Phone *</label>
           <input id="cphone" name="cphone" type="tel" [(ngModel)]="contact.cphone" #cphone="ngModel"
             placeholder="XXXXXXXXXX" required pattern="^[0-9]{10}$" />
+
+          <!-- Validation errors -->
           <div class="error-message" id="err-cphone" *ngIf="cphone.invalid && cphone.touched">
             <small *ngIf="cphone.errors?.['required']">Phone number is required</small>
             <small *ngIf="cphone.errors?.['pattern']">Enter a valid phone number (10 digits)</small>
           </div>
         </div>
-
+        <!-- Subject -->
         <div class="form-group">
           <label for="subject">Subject *</label>
           <select id="subject" name="subject" [(ngModel)]="contact.subject" #subject="ngModel" required>
@@ -50,6 +57,8 @@
             <option>Feedback</option>
             <option>Other</option>
           </select>
+
+          <!-- Validation errors -->
           <div class="error-message" id="err-subject" *ngIf="subject.invalid && subject.touched">
             <small *ngIf="subject.errors?.['required']">Subject is required</small>
           </div>
