--- a/src/app/components/header/header.css
+++ b/src/app/components/header/header.css
@@ -8,40 +8,36 @@ header {
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   z-index: 1000;
 }
- 
+
 .nav-wrapper {
   display: flex;
   justify-content: space-between;
   align-items: center;
   height: 80px;
 }
+
 .logo {
   display: flex;
-  align-items: center; /* keeps text & image aligned */
-  gap: 10px; /* space between image & text */
+  align-items: center;
+  gap: 10px;
   font-family: 'Poppins', sans-serif;
   font-size: 28px;
   font-weight: 700;
   letter-spacing: 2px;
-  background: linear-gradient(90deg, #ff9d42, #ff5e62);
- 
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
   position: relative;
   cursor: pointer;
   transition: all 0.4s ease-in-out;
 }
- 
+
 .logo img {
-  height: 55px; /* match font-size (28px) */
+  height: 55px;
   width: auto;
   object-fit: contain;
   margin-left: 30px;
 }
- 
-/* Glow + airplane effect */
+
 .logo::after {
-  content: '✈️';
+
   position: absolute;
   right: -35px;
   top: 50%;
@@ -50,30 +46,32 @@ header {
   opacity: 0.8;
   transition: transform 0.3s ease-in-out;
 }
- 
+
 .logo:hover {
   transform: scale(1.1);
   letter-spacing: 3px;
 }
- 
+
 .logo:hover::after {
   transform: translateY(-50%) rotate(360deg);
 }
- 
+
 @keyframes float {
+
   0%,
   100% {
     transform: translateY(0);
   }
+
   50% {
     transform: translateY(-5px);
   }
 }
- 
+
 .nav-menu {
   display: flex;
   gap: 30px;
-  margin-right: 20px;
+  padding-right: 20px;
 }
 
 .nav-link {
@@ -97,24 +95,37 @@ header {
   border-radius: 20px;
 }
 
- 
-.mobile-menu-btn {
-  display: none;
-  flex-direction: column;
-  background: none;
-  border: none;
-  cursor: pointer;
-  padding: 5px;
+button {
+  border: 0;
+  background: #fff;
 }
- 
-.mobile-menu-btn span {
-  width: 25px;
-  height: 3px;
-  background: var(--dark);
-  margin: 3px 0;
-  transition: 0.3s;
+
+#closeButton {
+  font-size: x-large;
+  color: black;
 }
- button{
-    border: 0;
-    background: #fff;
+
+#closeButton:hover {
+  color: #ff6600;
+}
+
+@media(max-width:680px) {
+  #closeButton {
+    display: block;
+    position: relative;
+    right: 30px;
+
+  }
+
+  .nav-menu {
+    gap: 10px;
+  }
+}
+
+@media(min-width:680px) {
+  #closeButton {
+    display: none;
+  }
+
+
 }
