--- a/src/app/components/destination/destination.css
+++ b/src/app/components/destination/destination.css
@@ -435,3 +435,16 @@
 .slider button:last-child {
   right: 10px;
 }
+
+.modal-content{
+  padding: 16px;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+.highlights ul, .itinerary ul{
+  margin-top: 12px;
+  padding-left: 20px; /* adjust as needed */
+  list-style-position: inside;
+}
